crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__execution__tests__banner_snapshot.snap
---
source: crates/rtf-orchestrator-ui/src/templates/execution.rs
expression: render_fragment!(execution(None).as_banner())
---

<section class="banner">
    <h2>exec-alpha</h2>
    <p><span class="status status--success">SUCCESSFUL</span></p>
    <dl>
        <dt>Execution ID</dt>
        <dd><code>00000000-0000-0000-0000-000000000003</code> 
<button type="button" class="copy-btn" data-copy="00000000-0000-0000-0000-000000000003" aria-label="Copy execution ID"
    title="Copy to clipboard">
    <svg viewBox="0 0 16 16" width="14" height="14" fill="none" stroke="currentColor" stroke-width="1.3"
        stroke-linejoin="round">
        <rect x="5" y="5" width="9" height="9" rx="1.5"></rect>
        <rect x="2" y="2" width="9" height="9" rx="1.5"></rect>
    </svg>
</button>
</dd>
        <dt>Cluster</dt>
        <dd>alpha</dd>
        <dt><a href="https://tldp.org/LDP/abs/html/exitcodes.html" target="_blank" rel="noopener noreferrer">Exit code
                &#8599;</a></dt>
        <dd>0</dd>
        <dt>Started</dt>
        <dd>2024-03-15T09:00:00Z</dd>
        <dt>Updated</dt>
        <dd>2024-03-15T09:05:00Z</dd>
        
        <dt>Completed</dt>
        <dd>2024-03-15T09:05:00Z</dd>
        
    </dl>
    <p>
        <a href="https://console.cloud.google.com/logs/query;query=resource.labels.cluster_name%3D%22alpha%22%0Aresource.labels.namespace_name%3D%2200000000-0000-0000-0000-000000000003%22;cursorTimestamp=2024-03-15T09:00:00.000Z;startTime=2024-03-15T09:00:00.000Z;endTime=2024-03-15T09:05:00.000Z?referrer=search&#38;project=gcp-project&#38;supportedpurview=project" target="_blank" rel="noopener noreferrer">View logs in GCP &#8599;</a>
        &middot;
        <a href="http://grafana.com/d/dash-uuid/dash-slug?orgId=1&#38;from=2024-03-15T09:00:00.000Z&#38;to=2024-03-15T09:05:00.000Z&#38;timezone=utc&#38;var-datasource=data-uuid&#38;var-cluster=&#38;var-namespace=00000000-0000-0000-0000-000000000003&#38;refresh=10s" target="_blank" rel="noopener noreferrer">View dashboard in Grafana
            &#8599;</a>
    </p>
    <p>
        <a href="/ui/execution/00000000-0000-0000-0000-000000000003/log.txt">Download log.txt</a>
        &middot;
        <a href="/ui/execution/00000000-0000-0000-0000-000000000003/output.zip">Download output.zip</a>
    </p>
</section>
